# opengl-sandbox

./: CMakeLists.txt
src/: Main.cpp
src/res/shaders/: vertex
